--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Black Panther MD X5 whatsapp",
+  "name": "SAVAGE MD whatsapp",
   "description": "whatsapp md bot build with nodejs",
-  "repository": "https://github.com/BlackPanther-svg/Black-Panther-MD-",
-  "logo": "https://telegra.ph/file/ec059aa5db556bbd951c6.jpg",
+  "repository": "https://github.com/cheekydavy/SAVAGE-MD",
+  "logo": "https://telegra.ph/file/a7ca8d4777fa8ad977795.jpg",
   "keywords": ["nodejs", "bot", "what5sapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
